Update to add features

--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,8 @@
             <!-- Player names will be displayed here -->
         </div>
         <div id="guestInstruction">
-        <h6>Waiting for other players to join. The host will start play when ready.</h6>
+        <h6>Waiting for other players to join. <br>
+            The host will start play when ready.</h6>
         <div id="lobbyDeck" style="height:300px; padding-top:20px"><img id="lobbyDeckImg" src="images/80sCars/cover.png" alt="deck choice"></div>
             </div>
         
@@ -178,7 +179,7 @@
 
         <div id="cardSpace">
 
-            <div id="endScreen"><img id="endScreenImg" src="/images/assets/Loser.png" alt=""><button id="returnToStart" class="goButton" onclick="backToStart()"><img src="images/assets/playAgainButton.png" alt="play again button"></button></div>
+            <div id="endScreen"><img id="endScreenImg" src="images/assets/Loser.png" alt=""><button id="returnToStart" class="goButton" onclick="backToStart()"><img src="images/assets/playAgainButton.png" alt="play again button"></button></div>
             
             <div id="cardContainer" class="cardShape">
                 <div id="playButtonDiv"></div>
