fix broken link

--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
 
         <div id="cardSpace">
 
-            <div id="endScreen"><img id="endScreenImg" src="images/assets/Loser.png" alt=""><button id="returnToStart" class="goButton" onclick="backToStart()"><img src="images/assets/playAgainButton.png" alt="play again button"></button></div>
+            <div id="endScreen"><img id="endScreenImg" src="images/assets/loser.png" alt=""><button id="returnToStart" class="goButton" onclick="backToStart()"><img src="images/assets/playAgainButton.png" alt="play again button"></button></div>
             
             <div id="cardContainer" class="cardShape">
                 <div id="playButtonDiv"></div>
